--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
     "eslint": "^8.0.1",
